src/K8S/exams-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
 name: examnpservice-srv
spec:
 type: NodePort
 selector:
  app: examservice
 ports:
  - name: examservice
    protocol: TCP
    port: 80
    targetPort: 80
