src/K8S/questions-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
 name: questionnpservice-srv
spec:
 type: NodePort
 selector:
  app: questionservice
 ports:
  - name: questionservice
    protocol: TCP
    port: 80
    targetPort: 80
