src/K8S/reports-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
 name: reportnpservice-srv
spec:
 type: NodePort
 selector:
  app: reportservice
 ports:
  - name: reportservice
    protocol: TCP
    port: 80
    targetPort: 80
