src/K8S/ingress-srv-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-srv
 annotations:
  kubernetes.io/ingress.class: nginx
  nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
 rules:
  - host: acme.com
    http: 
     paths:
      - path: /api/users
        pathType: Prefix
        backend: 
         service:
          name: users-clusterip-srv
          port: 
           number: 80
      - path: /api/auth
        pathType: Prefix
        backend: 
         service:
          name: users-clusterip-srv
          port: 
           number: 80
      - path: /api/questions
        pathType: Prefix
        backend:
         service:
          name: questions-clusterip-srv
          port:
           number: 80
      - path: /api/exam
        pathType: Prefix
        backend:
         service:
          name: exams-clusterip-srv
          port:
           number: 80
      - path: /api/report
        pathType: Prefix
        backend:
         service:
          name: reports-clusterip-srv
          port:
           number: 80
